force-app/main/default/objects/Fraud_Attestation_Doc__c/Fraud_Attestation_Doc__c.object-meta.xml
<CustomObject>
    <label>Fraud Attestation Doc</label>
    <nameField>
        <label>Fraud Attestation Doc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fraud Attestation Docs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>