force-app/main/default/objects/Fraud_Attestation_Doc__c/fields/Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Document_ID__c</fullName>
    <label>Document ID</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>