force-app/main/default/objects/Fraud_Attestation_Doc__c/fields/Fraud__c.field-meta.xml
<CustomField>
    <fullName>Fraud__c</fullName>
    <label>Fraud</label>
    <referenceTo>Fraud__c</referenceTo>
    <relationshipLabel>Attestation Docs</relationshipLabel>
    <relationshipName>Attestation_Docs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>