force-app/main/default/objects/Fraud_Attestation_Doc__c/fields/Sign_Status__c.field-meta.xml
<CustomField>
    <fullName>Sign_Status__c</fullName>
    <defaultValue>&apos;Draft&apos;</defaultValue>
    <label>Sign Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>