force-app/main/default/objects/Fraud_Attestation_Doc__c/fields/Signed_Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Signed_Document_ID__c</fullName>
    <description>Signed Version Document ID</description>
    <label>Signed Document ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>